src/objects/WorkstreamUser__c.object
<CustomObject>
    <description>Agile Process Management</description>
    <fields>
        <fullName>AvailabilityRatio__c</fullName>
        <formula>CASE (Availability__c,
&apos;Full Time&apos;, 1.00,
&apos;3/4 Time&apos;, 0.75,
&apos;1/2 Time&apos;, 0.50,
&apos;1/4 Time&apos;, 0.25,
&apos;As Needed&apos;, 0.00, 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>3/4 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/4 Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As Needed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DailyCapability__c</fullName>
        <formula>AvailabilityRatio__c * Workstream__r.DailyCapability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Capability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>User__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <formula>User__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cell</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>User__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WorkstreamUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkstreamRole__c</fullName>
        <label>User Role</label>
        <referenceTo>WorkstreamRole__c</referenceTo>
        <relationshipLabel>Workstream Users</relationshipLabel>
        <relationshipName>WorkstreamUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>Workstream__c</referenceTo>
        <relationshipLabel>Workstream Users</relationshipLabel>
        <relationshipName>WorkstreamUsers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workstream User</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workstream Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WorkstreamUser_UserIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(User__c), User__c == null)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User cannot be missing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WorkstreamUser_WorkstreamIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>OR(ISNULL(Workstream__c), Workstream__c == null)</errorConditionFormula>
        <errorDisplayField>Workstream__c</errorDisplayField>
        <errorMessage>Workstream cannot be missing.</errorMessage>
    </validationRules>
</CustomObject>